# conan_io_proj3

./: CMakeLists.txt  README.md  conanfile.py
_cmake/: config.cmake  dependencies.cmake
_cmake/AddLibrary/: AddBaseDir.cmake  FilterPathList.cmake  RemoveIgnoredPaths.cmake
_cmake/compilers/: clang.cmake  gcc49.cmake  vs2015.cmake
_cmake/dependencies/: Boost.cmake  UnitTest++.cmake
proj3/: CMakeLists.txt
proj3/src/: main.cpp
